V1 Random neural network
probleme avec la fin des instances